bazel_dep(name = "aspect_bazel_lib", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_bazel_lib",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "rules_go",  version = "0.50.1", repo_name = "io_bazel_rules_go", dev_dependency = True)
