load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//lib:__subpackages__"])

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "copy_common",
    srcs = ["copy_common.bzl"],
)

bzl_library(
    name = "copy_file",
    srcs = ["copy_file.bzl"],
    deps = [
        ":copy_common",
        ":directory_path",
    ],
)

bzl_library(
    name = "copy_directory",
    srcs = ["copy_directory.bzl"],
    deps = [":copy_common"],
)

bzl_library(
    name = "copy_to_directory",
    srcs = ["copy_to_directory.bzl"],
    deps = [
        ":copy_common",
        ":directory_path",
        ":glob_match",
        ":output_files",
        ":paths",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "copy_to_bin",
    srcs = ["copy_to_bin.bzl"],
    deps = [
        ":copy_file",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "params_file",
    srcs = ["params_file.bzl"],
    deps = [":expand_make_vars"],
)

bzl_library(
    name = "paths",
    srcs = ["paths.bzl"],
    deps = ["@bazel_skylib//lib:paths"],
)

bzl_library(
    name = "docs",
    srcs = ["docs.bzl"],
    deps = [
        "//lib:write_source_files",
        "@io_bazel_stardoc//stardoc:stardoc_lib",
    ],
)

bzl_library(
    name = "expand_make_vars",
    srcs = ["expand_make_vars.bzl"],
    deps = [
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
)

bzl_library(
    name = "jq",
    srcs = ["jq.bzl"],
)

bzl_library(
    name = "write_source_file",
    srcs = ["write_source_file.bzl"],
    deps = [
        ":directory_path",
        ":output_files",
        "//lib:utils",
    ],
)

bzl_library(
    name = "fail_with_message_test",
    srcs = ["fail_with_message_test.bzl"],
)

bzl_library(
    name = "glob_match",
    srcs = ["glob_match.bzl"],
)

bzl_library(
    name = "directory_path",
    srcs = ["directory_path.bzl"],
    deps = ["//lib:utils"],
)

bzl_library(
    name = "output_files",
    srcs = ["output_files.bzl"],
    deps = ["//lib:utils"],
)

bzl_library(
    name = "diff_test",
    srcs = ["diff_test.bzl"],
)

bzl_library(
    name = "run_binary",
    srcs = ["run_binary.bzl"],
    deps = [
        ":expand_make_vars",
        "//lib:stamping",
        "@bazel_skylib//lib:dicts",
    ],
)

bzl_library(
    name = "repo_utils",
    srcs = ["repo_utils.bzl"],
)

bzl_library(
    name = "patch",
    srcs = ["patch.bzl"],
    deps = [":repo_utils"],
)

bzl_library(
    name = "yq",
    srcs = ["yq.bzl"],
)

bzl_library(
    name = "host_repo",
    srcs = ["host_repo.bzl"],
    deps = [":repo_utils"],
)

bzl_library(
    name = "stamping",
    srcs = ["stamping.bzl"],
)
