load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//lib:__subpackages__"])

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

exports_files(
    [
        "diff_test_tmpl.sh",
        "diff_test_tmpl.bat",
        "parse_status_file.jq",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "copy_common",
    srcs = ["copy_common.bzl"],
)

bzl_library(
    name = "platform_utils",
    srcs = ["platform_utils.bzl"],
    deps = ["@local_config_platform//:constraints"],
)

bzl_library(
    name = "copy_file",
    srcs = ["copy_file.bzl"],
    deps = [
        ":copy_common",
        ":directory_path",
        ":platform_utils",
    ],
)

bzl_library(
    name = "copy_directory",
    srcs = ["copy_directory.bzl"],
    deps = [
        ":copy_common",
        ":platform_utils",
    ],
)

bzl_library(
    name = "copy_to_directory",
    srcs = ["copy_to_directory.bzl"],
    deps = [
        ":copy_common",
        ":directory_path",
        ":glob_match",
        ":output_files",
        ":paths",
        ":platform_utils",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "copy_to_bin",
    srcs = ["copy_to_bin.bzl"],
    deps = [
        ":copy_file",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "params_file",
    srcs = ["params_file.bzl"],
    deps = [":expand_locations"],
)

bzl_library(
    name = "paths",
    srcs = ["paths.bzl"],
    deps = ["@bazel_skylib//lib:paths"],
)

bzl_library(
    name = "docs",
    srcs = ["docs.bzl"],
    deps = [
        "//lib:write_source_files",
        "@io_bazel_stardoc//stardoc:stardoc_lib",
    ],
)

bzl_library(
    name = "expand_locations",
    srcs = ["expand_locations.bzl"],
    deps = [
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "expand_template",
    srcs = ["expand_template.bzl"],
    deps = [
        ":expand_locations",
        "@bazel_skylib//lib:dicts",
    ],
)

bzl_library(
    name = "expand_variables",
    srcs = ["expand_variables.bzl"],
    deps = [
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
)

bzl_library(
    name = "jq",
    srcs = ["jq.bzl"],
    deps = ["//lib:stamping"],
)

bzl_library(
    name = "local_config_platform",
    srcs = ["local_config_platform.bzl"],
)

bzl_library(
    name = "write_source_file",
    srcs = ["write_source_file.bzl"],
    deps = [
        ":directory_path",
        ":output_files",
        "//lib:utils",
    ],
)

bzl_library(
    name = "fail_with_message_test",
    srcs = ["fail_with_message_test.bzl"],
)

bzl_library(
    name = "glob_match",
    srcs = ["glob_match.bzl"],
)

bzl_library(
    name = "directory_path",
    srcs = ["directory_path.bzl"],
    deps = ["//lib:utils"],
)

bzl_library(
    name = "output_files",
    srcs = ["output_files.bzl"],
    deps = ["//lib:utils"],
)

bzl_library(
    name = "diff_test",
    srcs = ["diff_test.bzl"],
)

bzl_library(
    name = "run_binary",
    srcs = ["run_binary.bzl"],
    deps = [
        ":expand_locations",
        ":expand_variables",
        "//lib:stamping",
        "@bazel_skylib//lib:dicts",
    ],
)

bzl_library(
    name = "patch",
    srcs = ["patch.bzl"],
    deps = [":repo_utils"],
)

bzl_library(
    name = "host_repo",
    srcs = ["host_repo.bzl"],
    deps = [":repo_utils"],
)

bzl_library(
    name = "jq_toolchain",
    srcs = ["jq_toolchain.bzl"],
    deps = [":repo_utils"],
)

bzl_library(
    name = "repo_utils",
    srcs = ["repo_utils.bzl"],
)

bzl_library(
    name = "stamping",
    srcs = ["stamping.bzl"],
)

bzl_library(
    name = "yq",
    srcs = ["yq.bzl"],
)

bzl_library(
    name = "yq_toolchain",
    srcs = ["yq_toolchain.bzl"],
    deps = [":repo_utils"],
)
