load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "copy_directory_lib",
    srcs = ["main.go"],
    importpath = "github.com/aspect-build/bazel-lib/tools/copy_directory",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/common",
        "@com_github_yookoala_realpath//:go_default_library",
    ],
)

go_binary(
    name = "copy_directory",
    embed = [":copy_directory_lib"],
    visibility = ["//visibility:public"],
)
