load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "copy_to_directory_lib",
    srcs = ["main.go"],
    importpath = "github.com/aspect-build/bazel-lib/tools/copy_to_directory",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "copy_to_directory",
    embed = [":copy_to_directory_lib"],
    visibility = ["//visibility:public"],
)
