load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mtree_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bazel-lib/tools/mtree",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "mtree",
    embed = [":mtree_lib"],
    visibility = ["//visibility:public"],
)
