load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "run_binary_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bazel-lib/tools/run_binary",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_tetratelabs_wazero//:wazero",
        "@com_github_tetratelabs_wazero//imports/wasi_snapshot_preview1",
    ],
)

go_binary(
    name = "run_binary",
    embed = [":run_binary_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
